# large-track-viewer

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html
.github/workflows/: ci.yml  release.yml
crates/eframe-entrypoints/: Cargo.toml  build.rs
crates/eframe-entrypoints/src/: async_runtime.rs  cli.rs  file_picker.rs  lib.rs  metadata.rs  profiling.rs  run.rs  web.rs
crates/eframe-entrypoints/web/: app.js  index.html  style.css
crates/egui-eframe-entrypoints/: Cargo.toml
crates/egui-eframe-entrypoints/src/: lib.rs  metadata.rs  profiling.rs  run.rs
crates/large-track-lib/: Cargo.toml
crates/large-track-lib/benches/: performance.rs
crates/large-track-lib/src/: collection.rs  lib.rs  quadtree.rs  route.rs  segment.rs  utils.rs
crates/large-track-viewer/: Cargo.toml  manifest.yaml
crates/large-track-viewer/src/: lib.rs  main.rs
crates/large-track-viewer/src/app/: mod.rs  plugin.rs  settings.rs  state.rs  ui_panels.rs
crates/large-track-viewer/src/app/storage/: mod.rs
src/: lib.rs  main.rs
src/app/: cli.rs  mod.rs  plugin.rs  settings.rs  state.rs
src/data/: collection.rs  mod.rs  quadtree.rs  route.rs  segment.rs  utils.rs
src/entrypoints/: cli.rs  index.html  lib.rs  main.rs  metadata.rs  mod.rs  profiling.rs  run.rs  web.rs
