[workspace]
resolver = "2"
members = [
    "crates/large-track-viewer",
    "crates/large-track-lib",
    "crates/egui-eframe-entrypoints",
]

[workspace.package]
authors = ["Yeicor"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Yeicor/large-track-viewer"

[workspace.dependencies]
# === UI Framework ===
eframe = { version = "0.33", default-features = false, features = ["accesskit", "default_fonts", "persistence", "wayland", "web_screen_reader", "wgpu", "x11"] }
egui = "*" # Use the same version as eframe
winit = "*" # Use the same version as eframe

# === Async Runtime ===
tokio = { version = "1.48", default-features = false, features = ["macros", "sync"] }

# === CLI ===
clap = { version = "4.5", features = ["derive"] }

# === Logging & profiling ===
tracing = "0.1"
profiling = "1.0"

# === GPX and Geo ===
gpx = "0.10"
geo = "0.31"

# === Web ===
web-sys = "0.3"



[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1
