[workspace]
resolver = "2"
members = [
    "crates/large-track-viewer",
    "crates/large-track-lib",
    "crates/eframe-entrypoints",
]

[workspace.package]
authors = ["Yeicor"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Yeicor/large-track-viewer"

[workspace.dependencies]
# === UI Framework ===
eframe = { version = "0.33", default-features = false, features = [ "glow", "default_fonts", "wayland", "x11", "persistence" ] }
egui = "*" # Use the same version as eframe
winit = "*" # Use the same version as eframe
rfd = "0.17" # Selecting files on native platforms

# === Async Runtime ===
tokio = { version = "1.48", default-features = false, features = ["macros", "sync", "io-util"] }

# === CLI ===
clap = { version = "4.5", features = ["derive", "env"] }

# === Logging & profiling ===
tracing = "0.1"
profiling = "1.0"
thiserror = "2.0"

# === GPX and Geo ===
gpx = "0.10"
geo = "0.32"

# === Web ===
wasm-bindgen = "0.2"
web-sys = "0.3"
js-sys = "0.3"
futures = "0.3"

# === Release ===

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1
