[package]
name = "large-track-lib"
version = "0.2.8"
authors.workspace = true
description = "Efficient storage and querying of large-scale GPX track collections with LOD quadtree indexing"
repository.workspace = true
license.workspace = true
edition.workspace = true

[features]
default = []
serde = ["dep:serde", "gpx/use-serde", "geo/use-serde"]
profiling = []

[dependencies]
# === GPX and Geo ===
gpx.workspace = true
geo.workspace = true

# === Data structures ===
rayon = "1.10"
dashmap = "6.1"
smallvec = "1.13"

# === Serialization ===
serde = { version = "1.0", features = ["derive"], optional = true }

# === Error Handling ===
thiserror = "2.0"

# === Logging ===
tracing.workspace = true
profiling.workspace = true

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "performance"
harness = false
