[package]
name = "large-track-viewer"
version = "0.1.10"
authors.workspace = true
description = "Large Track Viewer - A cross-platform application for viewing and analyzing large GPS tracks"
repository.workspace = true
license.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["native", "profiling"]
native = ["eframe-entrypoints/native"]
web = ["eframe-entrypoints/web"]
android = ["eframe-entrypoints/android"]
profiling = ["eframe-entrypoints/profiling"]

[dependencies]
# === Local crates ===
large-track-lib = { path = "../large-track-lib", features = ["serde"] }
eframe-entrypoints = { path = "../eframe-entrypoints", default-features = false }

# === UI Framework ===
eframe.workspace = true
egui.workspace = true
winit.workspace = true

# === Async Runtime ===
tokio.workspace = true

# === CLI ===
clap.workspace = true

# === Logging & profiling ===
tracing.workspace = true
profiling.workspace = true

# === Geo ===
geo.workspace = true
walkers = "0.50"
gpx.workspace = true

# === Misc ===
instant = { version = "0.1", features = ["wasm-bindgen"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"

# === Desktop ===
[target.'cfg(not(any(target_arch = "wasm32", target_os = "android")))'.dependencies]
rfd = "0.15"

# === Web ===
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen.workspace = true
web-sys.workspace = true
tracing-wasm = "0.2"
console_error_panic_hook = "0.1"

# === Android ===
[package.metadata.android]
package = "com.github.yeicor.largetrackviewer"

[package.metadata.android.application]
label = "Large Track Viewer"

[package.metadata.android.sdk]
min_sdk_version = 23
target_sdk_version = 35
max_sdk_version = 35

# === Release ===

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1
